tests/fail/destruct_resource_copy.tk
// Naked destructuring of resource String in positional destructuring should be forbidden.
import std/string::String

shape Pair(
    a: i32,
    s: String
)

pub fn main() -> i32 {
    auto t = Pair(a = 42, s = String::from("Hello Resource"))
    auto Pair(a = .a, s = .s) = t
    return 0
}
